--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -91,9 +91,10 @@
       <div class="panel">
         <div class="panel-header"><h3>Docker / Containers</h3></div>
         <div class="panel-body">
-          <pre id="docker-stats" class="pre"></pre>
-          <h4>Containers</h4>
-          <ul id="containers-list" class="list"></ul>
+          <table class="table" id="docker-table">
+            <thead></thead>
+            <tbody></tbody>
+          </table>
         </div>
       </div>
 
