--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -119,7 +119,7 @@
         <div class="panel-header"><h3>Disks</h3></div>
         <div class="panel-body">
           <table class="table" id="disks-table">
-            <thead><tr><th>Name</th><th>Size</th><th>Mounts</th></tr></thead>
+            <thead></thead>
             <tbody></tbody>
           </table>
         </div>
@@ -129,7 +129,7 @@
         <div class="panel-header"><h3>PyUdisk</h3></div>
         <div class="panel-body">
           <table class="table" id="pyudisk-table">
-            <thead><tr><th>Model</th><th>Mountpoint</th><th>Temperature</th><th>Bad Sectors</th><th>Test Status</th><th>Uptime</th><th>Total</th><th>Used</th><th>Free</th><th>Percent</th></tr></thead>
+            <thead></thead>
             <tbody></tbody>
           </table>
         </div>
@@ -139,7 +139,7 @@
         <div class="panel-header"><h3>Certificates</h3></div>
         <div class="panel-body">
           <table class="table" id="certificates-table">
-            <thead><tr><th>Certificate Name</th><th>Key Type</th><th>Domains</th><th>Expiry Date</th><th>Validity</th></tr></thead>
+            <thead></thead>
             <tbody></tbody>
           </table>
         </div>
