style: Improve service level metrics' display

--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -88,7 +88,7 @@
           <input id="svc-filter" placeholder="filter service name..." />
         </div>
         <table class="table" id="services-table">
-          <thead><tr><th>PID</th><th>Name</th><th>Status</th><th>CPU</th><th>Memory</th><th>Uptime</th><th>Threads</th><th>Open Files</th></tr></thead>
+          <thead><tr><th>PID</th><th>Name</th><th>Status</th><th>CPU</th><th>Memory</th><th>Threads</th><th>Open Files</th></tr></thead>
           <tbody></tbody>
         </table>
       </div>
