feat: Add paginator for tables in the UI

--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -23,32 +23,32 @@
     <section class="meta-row">
       <div class="meta-card">
         <div class="meta-title">System</div>
-        <div id="system" class="meta-value pre">—</div>
+        <div id="system" class="meta-value pre"></div>
       </div>
 
       <div class="meta-card">
         <div class="meta-title">IP</div>
-        <div id="ip-info" class="meta-value pre">—</div>
+        <div id="ip-info" class="meta-value pre"></div>
       </div>
 
       <div class="meta-card">
         <div class="meta-title">GPU / CPU Model</div>
-        <div id="processor" class="meta-value pre">—</div>
+        <div id="processor" class="meta-value pre"></div>
       </div>
 
       <div class="meta-card">
         <div class="meta-title">CPU Load (1/5/15)</div>
-        <div id="cpuload" class="meta-value pre">—</div>
+        <div id="cpuload" class="meta-value pre"></div>
       </div>
 
       <div class="meta-card">
         <div class="meta-title">Disk ( / )</div>
-        <div id="disk" class="meta-value pre">—</div>
+        <div id="disk" class="meta-value pre"></div>
       </div>
 
       <div class="meta-card">
         <div class="meta-title">Memory</div>
-        <div id="memory" class="meta-value pre">—</div>
+        <div id="memory" class="meta-value pre"></div>
       </div>
     </section>
 
