--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -83,7 +83,12 @@
 
     <section class="tables-row">
       <div class="panel">
-        <div class="panel-header"><h3>Services</h3></div>
+        <div class="panel-header">
+          <h3>Services</h3>
+          <div class="panel-actions">
+            <label><input type="checkbox" id="get-all-services" /> Get all</label>
+          </div>
+        </div>
         <div class="panel-body service-controls">
           <input id="svc-filter" placeholder="filter service name..." />
         </div>
