style: Set ``show-cores`` checkbox to true during startup

--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -57,7 +57,7 @@
         <div class="panel-header">
           <h3>CPU (Average)</h3>
           <div class="panel-actions">
-            <label><input type="checkbox" id="show-cores" /> Show per-core</label>
+            <label><input type="checkbox" id="show-cores" checked="true" /> Show per-core</label>
           </div>
         </div>
         <canvas id="cpu-avg-chart" class="chart"></canvas>
