style: Include project link and version for footer

--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -152,9 +152,10 @@
     </section>
   </main>
 
-  <!-- TODO: Remove or provide context -->
   <footer class="footer">
-    <div>OpenAPI: <code>/static/openapi.json</code> (uploaded file available at <code>/mnt/data/openapi.json</code>)</div>
+    <div><code>PyObservability: v{{ version }}</code><br>
+      <a href="https://github.com/thevickypedia/PyObservability" target="_blank">https://github.com/thevickypedia/PyObservability</a>
+    </div>
   </footer>
 
   <script>
