--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -98,7 +98,54 @@
                     <canvas id="unified-disk-chart" class="chart"></canvas>
                 </div>
             </div>
+            {# TODO: Make the following tables into multiple div containers #}
             <div id="unified-legend" class="unified-legend"></div>
+            <div class="unified-tables">
+                <div class="unified-tables-grid">
+                    <div class="panel unified-table-panel">
+                        <div class="panel-header"><h3>Services</h3></div>
+                        <table class="table" id="unified-services-table">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="panel unified-table-panel">
+                        <div class="panel-header"><h3>Processes</h3></div>
+                        <table class="table" id="unified-processes-table">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="panel unified-table-panel">
+                        <div class="panel-header"><h3>Docker Containers</h3></div>
+                        <table class="table" id="unified-docker-table">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="panel unified-table-panel">
+                        <div class="panel-header"><h3>Disks</h3></div>
+                        <table class="table" id="unified-disks-table">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="panel unified-table-panel">
+                        <div class="panel-header"><h3>PyUdisk Metrics</h3></div>
+                        <table class="table" id="unified-pyudisk-table">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="panel unified-table-panel">
+                        <div class="panel-header"><h3>Certificates</h3></div>
+                        <table class="table" id="unified-certificates-table">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
